Pega todas as informações dos cards dos robos

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     ],
     "rules": {
         "linebreak-style": "off",
-        "react/no-array-index-key": "off"
+        "react/no-array-index-key": "off",
+        "import/no-extraneous-dependencies": "off",
+        "camelcase": "off"
     }
 }
