pequenas correções e realizado o POST para a api

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "linebreak-style": "off",
         "react/no-array-index-key": "off",
         "import/no-extraneous-dependencies": "off",
-        "camelcase": "off"
+        "camelcase": "off",
+        "quote-props": "off"
     }
 }
